package org.bem.procrapi.utilities;

public enum CategorieExcuse {
    TRAVAIL, ETUDES, VIE_SOCIALE
}
