package org.bem.procrapi.utilities;

public enum DifficulteDefi {
    FACILE,
    MOYEN,
    DIFFICILE
}
