package org.bem.procrapi.utilities;

public enum NiveauProcrastination {
    DEBUTANT,
    INTERMEDIAIRE,
    EXPERT
}
