package org.bem.procrapi.utilities;

public enum StatutExcuse {
    EN_ATTENTE, APPROUVEE, REJETEE
}
