package org.bem.procrapi.utilities;

public enum StatutParticipation {
    INSCRIT,
    EN_COURS,
    TERMINE
}
