package org.bem.procrapi.utilities;

public enum StatutPiege {
    ACTIF,
    INACTIF
}
