package org.bem.procrapi.utilities;

public enum StatutRecompense {
    ACTIF, EXPIRE
}
