package org.bem.procrapi.utilities;

public enum StatutTache {
    EN_ATTENTE,
    EVITE_AVEC_SUCCES,
    REALISEE_IN_EXTREMIS,
    CATASTROPHE
}
