package org.bem.procrapi.utilities;

public enum TypePiege {
    JEU,
    DEFI,
    MEDITATION
}
