package org.bem.procrapi.utilities.enumerations;

public enum StatutDefi {
    INSCRIT,
    EN_COURS,
    TERMINE
}
