package org.bem.procrapi.utilities.enumerations;

public enum TypeRecompense {
    BADGE,
    TITRE_HONORIFIQUE,
    POUVOIR_SPECIAL
}
